[package]
name = "urlcount"
version = "0.1.0"
edition = "2024"
description = "Counts unique URLs in GDELT Parquet files"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
indicatif = "0.17.11"
parquet = "55.1.0"
